# bitwise-interval-arithmetic

./: .gitignore  CMakeLists.txt  Interval.cpp  Interval.hh  Intervals.hh  Numbers.hh  README.md  Specif.md  appear.cpp  appear.hh  bitwiseAnd.cpp  bitwiseAnd.hh  bitwiseIntervals.hh  bitwiseNot.cpp  bitwiseNot.hh  bitwiseOperations.cpp  bitwiseOperations.hh  bitwiseOr.cpp  bitwiseOr.hh  bitwiseXOr.cpp  bitwiseXOr.hh  bwor.cpp  bwor.hh  errors.txt  main.cpp  negation.cpp  negation.hh  newand.cpp  newand.hh  newor.cpp  newor.hh  random.cpp  random.hh
.github/workflows/: c-cpp.yml
